--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 					<a href="#">забыли пароль?</a>
 				</div>
 				<div class="mini-navigation">
-					<a href="#">Карта сайта</a>
-					<a href="#">На главную</a>
-					<a href="#">Связаться</a>
+					<a href="#" title="На главную">На главную</a>
+					<a href="#"  title="Карта сайта">Карта сайта</a>
+					<a href="#" title="Написать нам">Написать нам</a>
 				</div>
 			</div>
 			<div class="banner">
@@ -40,86 +40,91 @@
 					<li><a href="#">Контакты</a></li>
 				</ul>
 				<div class="basket">
-					<a href="#">Корзина</a><p>товаров:&nbsp;<span class="sum">0&nbsp;</span>на сумму:&nbsp;<span class="total-sum">0,00 грн.</span></p>
+					<a href="#" title="Корзина">Корзина</a><p>товаров:&nbsp;<span class="sum">0&nbsp;</span>на сумму:&nbsp;<span class="total-sum">0,00 грн.</span></p>
 				</div>
 			</nav>
 		</header>
+
+
+
 		<main class="container">
+
 			<section class="search">
 				<form class="select all" action="zazor.com.ua" method="get">
-		      <fieldset>
-		        <h3>Поиск по автомобилю</h3>
-		        <div class="disks">
-		          <b>Диски:</b>
+					<fieldset>
+						<b class="search-title">Поиск по автомобилю</b>
+						<div class="disks">
+							<b>Диски:</b>
 							<ul>
 								<li>
-					        <label for="car-brand1">Марка <span>авто:</span></label>
-					        <select id="car-brand1" name="car-brand">
-					          <option value=""></option>
-					          <option value=""></option>
-					        </select>
+									<label for="car-brand1">Марка <span>авто:</span></label>
+									<select id="car-brand1" name="car-brand">
+										<option value="&nbsp;">&nbsp;</option>
+										<option value="&nbsp;">&nbsp;</option>
+									</select>
 								</li>
 								<li>
-				          <label for="car-model1">Модель<br><span>автомобиля:</span></label>
-				          <select id="car-model1" name="car-model">
-				            <option value=""></option>
-				            <option value=""></option>
-				          </select>
+									<label for="car-model1">Модель<br><span>автомобиля:</span></label>
+									<select id="car-model1" name="car-model">
+										<option value="&nbsp;">&nbsp;</option>
+										<option value="&nbsp;">&nbsp;</option>
+									</select>
 								</li>
 								<li>
-				          <label for="year1">Год выпуска<br><span>автомобиля:</span></label>
-				          <select id="year1" name="year">
-				            <option value=""></option>
-				            <option value=""></option>
-				          </select>
+									<label for="year1">Год выпуска<br><span>автомобиля:</span></label>
+									<select id="year1" name="year">
+										<option value="&nbsp;">&nbsp;</option>
+										<option value="&nbsp;">&nbsp;</option>
+									</select>
 								</li>
 								<li>
-				          <label for="equipment1">Комплектация:</label>
-				          <select id="equipment1" name="equipment">
-				            <option value=""></option>
-				            <option value=""></option>
-				          </select>
-								</li>
-							</ul>
-		        </div>
-		        <div class="tire">
-		          <b>Шины:</b>
-							<ul>
-								<li>
-				          <label for="car-brand2">Марка <span>авто:</span></label>
-				          <select id="car-brand2" name="car-brand">
-				            <option value=""></option>
-				            <option value=""></option>
-				          </select>
-								</li>
-								<li>
-				          <label for="car-model2">Модель<br><span>автомобиля:</span></label>
-				          <select id="car-model2" name="car-model">
-				            <option value=""></option>
-				            <option value=""></option>
-				          </select>
-								</li>
-								<li>
-				          <label for="year2">Год выпуска<br><span>автомобиля:</span></label>
-				          <select id="year2" name="year">
-				            <option value=""></option>
-				            <option value=""></option>
-				          </select>
-								</li>
-								<li>
-				          <label for="equipment2">Комплектация:</label>
-				          <select id="equipment2" name="equipment">
-				            <option value=""></option>
-				            <option value=""></option>
-				          </select>
-								</li>
-								<li>
-		        			<input class="report" type="submit" name="search" value="поиск...">
+									<label for="equipment1">Комплектация:</label>
+									<select id="equipment1" name="equipment">
+										<option value="&nbsp;">&nbsp;</option>
+										<option value="&nbsp;">&nbsp;</option>
+									</select>
 								</li>
 							</ul>
 						</div>
-		      </fieldset>
-		    </form>
+						<div class="tire">
+							<b>Шины:</b>
+							<ul>
+								<li>
+									<label for="car-brand2">Марка <span>авто:</span></label>
+									<select id="car-brand2" name="car-brand">
+										<option value="&nbsp;">&nbsp;</option>
+										<option value="&nbsp;">&nbsp;</option>
+									</select>
+								</li>
+								<li>
+									<label for="car-model2">Модель<br><span>автомобиля:</span></label>
+									<select id="car-model2" name="car-model">
+										<option value="&nbsp;">&nbsp;</option>
+										<option value="&nbsp;">&nbsp;</option>
+									</select>
+								</li>
+								<li>
+									<label for="year2">Год выпуска<br><span>автомобиля:</span></label>
+									<select id="year2" name="year">
+										<option value="&nbsp;">&nbsp;</option>
+										<option value="&nbsp;">&nbsp;</option>
+									</select>
+								</li>
+								<li>
+									<label for="equipment2">Комплектация:</label>
+									<select id="equipment2" name="equipment">
+										<option value="&nbsp;">&nbsp;</option>
+										<option value="&nbsp;">&nbsp;</option>
+									</select>
+								</li>
+								<li>
+									<input class="report" type="submit" name="search" value="поиск...">
+								</li>
+							</ul>
+						</div>
+					</fieldset>
+				</form>
+
 				<form class="select bus" action="zazor.com.ua" method="get">
 					<fieldset>
 						<b>поиск шин</b>
@@ -131,8 +136,8 @@
 									<option value="150">150</option>
 								</select>&nbsp;/&nbsp;
 								<select name="size2">
-									<option value="&nbsp;"></option>
-									<option value="&nbsp;"></option>
+									<option value="&nbsp;">&nbsp;</option>
+									<option value="&nbsp;">&nbsp;</option>
 								</select>
 							</li>
 							<li>
@@ -158,6 +163,7 @@
 						</ul>
 					</fieldset>
 				</form>
+
 				<form class="select dial" action="zazor.com.ua" method="get">
 					<fieldset>
 						<b>поиск дисков</b>
@@ -167,21 +173,21 @@
 									<label for="D">Диаметр<span>диска:</span></label>
 									<select id="D" name="D">
 										<option value="14">14</option>
-										<option value=""></option>
+										<option value="&nbsp;">&nbsp;</option>
 									</select>
 								</li>
 								<li>
 									<label for="hole">Количество<br><span>крепёжных<br>отверстий:</span></label>
 									<select id="hole" name="holes">
 										<option value="3">3</option>
-										<option value=""></option>
+										<option value="&nbsp;">&nbsp;</option>
 									</select>
 								</li>
 								<li>
 									<label for="D2">Диаметр<br><span>расположения<br>крепёжных<br>отверстий:</span></label>
 									<select id="D2" name="D">
 										<option value="14">14</option>
-										<option value=""></option>
+										<option value="&nbsp;">&nbsp;</option>
 									</select>
 								</li>
 							</ul>
@@ -192,14 +198,14 @@
 									<label for="DC">ДЦО<br><span>(диаметр<br>центрального<br>отверстия):</span></label>
 									<select id="DC" name="DC">
 										<option value="12">12</option>
-										<option value=""></option>
+										<option value="&nbsp;">&nbsp;</option>
 									</select>
 								</li>
 								<li>
 									<label for="ET">ЕТ<br><span>(вылет диска):</span></label>
 									<select id="ET" name="ET">
 										<option value="12">12</option>
-										<option value=""></option>
+										<option value="&nbsp;">&nbsp;</option>
 									</select>
 								</li>
 								<li>
@@ -210,13 +216,14 @@
 					</fieldset>
 				</form>
 			</section>
+
 			<aside class="catalog">
 				<h2 class="title">Каталог продукции:</h2>
-			 	<ul>
+				<ul>
 					<li><span class="title subtitle">Шины</span>
 						<ul>
 							<li><a href="#">Наименование 1</a></li>
-							<li><a class="active" href="#">Наименование 2</a></li>
+							<li><a href="#">Наименование 2</a></li>
 							<li><a href="#">Наименование 3</a></li>
 							<li><a href="#">Наименование 4</a></li>
 						</ul>
@@ -239,6 +246,7 @@
 					</li>
 			 	</ul>
 			</aside>
+
 			<section class="items">
 				<div class="goods">
 					<figure>
@@ -304,6 +312,7 @@
 					<span class="price">393.00&nbsp;<span>грн.</span></span>
 				</div>
 			</section>
+
 			<aside class="brands">
 				<h2 class="title">Бренды:</h2>
 				<form action="zazor.com.ua" method="get">
@@ -322,6 +331,7 @@
 					<input class="btn" type="submit" value="Выбрать">
 				</form>
 			</aside>
+
 			<div class="brandlogo">
 				<ul>
 					<li><a href="#" target="_blank"><img src="img/08.png" alt="brandlogo1"></a></li>
@@ -335,6 +345,9 @@
 				</ul>
 			</div>
 		</main>
+
+
+
 		<footer class="container">
 			<ul class="footer-navigation">
 				<li><a class="after" href="#">О компании</a></li>
